--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Update K8s Manifests
       run: |
         cat deploy/deployment.yaml
-        sed -i "s|image: sibasish934/devops-demo:.*|image: sibasish934/devops-demo:${{ env.VERSION }}|g" deploy/deployment.yaml
+        sed -i "s|image: biswesh/devops-demo:.*|image: biswesh/devops-demo:${{ env.VERSION }}|g" deploy/deployment.yaml
         cat deploy/deployment.yaml
 
     # Update Github
