--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,18 @@
-events{}
+events {}
 http {
-    include /etc/nginx/mime.types
-    grip on;
-    grip_vary on;
-    grip_min_length 1024;
-    grip_proxied expried no-cache no-store private auth;
-    grip_types text/plain text/css text/xml text/javascript application/x-javascript application/>;
-    grip_disable "MSTE [1-6]\.";
-    server{
-        listen 80
-        server_name localhost
-        index index.html
+    include /etc/nginx/mime.types;
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/javascript;
+    gzip_disable "MSIE [1-6]\.";
+    server {
+        listen 80;
+        server_name localhost;
+        index index.html;
         location / {
-            try_files $uri $uri/ /index.html
+            try_files $uri $uri/ /index.html;
         }
     }
 }
